--- a/src/pages/HomePage/index.css
+++ b/src/pages/HomePage/index.css
@@ -3,6 +3,7 @@
   width: 100%;
   background-image: url('../../assets/images/big_image.jpg');
   margin-top: -22px;
+  padding-top: 67px;
 }
 
 .home-page-button {
@@ -63,4 +64,8 @@
   background-color: #3e8e41;
   box-shadow: 0 5px #666;
   transform: translateY(4px);
+}
+
+.bounce {
+  /* margin-top: 10px; */
 }
