--- a/src/pages/SearchByStorePage/index.css
+++ b/src/pages/SearchByStorePage/index.css
@@ -2,6 +2,7 @@
   height: 100vh;
   width: 100%;
   background-image: url('../../assets/images/big_image.jpg');
+  padding-top: 70px;
 }
 
 .search-by-Store-label {
