--- a/src/pages/SearchByCategoryPage/index.css
+++ b/src/pages/SearchByCategoryPage/index.css
@@ -1,5 +1,6 @@
 .search-by-category-page-wrapper {
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   width: 100%;
   background-image: url('../../assets/images/big_image.jpg');
 }
@@ -28,4 +29,6 @@
   background-color: #3e8e41;
   box-shadow: 0 5px #666;
   transform: translateY(4px);
+}
+.chips-wrapper {
 }
